--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -160,8 +160,7 @@
                         {
                             @ViewBag.EventoAcabo
                         }
-                        else
-                        {
+                        else{
                             if (ViewBag.EventoNoDisponible != null && codperfilActual < 3)
                             {
                                 <p>@ViewBag.EventoNoDisponible</p>
@@ -246,11 +245,8 @@
                                                     <div class="col-md-6">
                                                         <button type="submit" name="boton" value="carrito" class="btn btn-success pull-right ">Agregar al carrito <span class="glyphicon glyphicon-shopping-cart"></span></button>
                                                     </div>
-<<<<<<< HEAD
+
                                                     if (Request.IsAuthenticated && ((Boolean)ViewBag.evento.permiteReserva))
-=======
-                                                    if (Request.IsAuthenticated && ViewBag.evento.permiteReserva)
->>>>>>> 04af653002f2d4a3e3d6a8cb9cdbdc23833bccfd
                                                     {
                                                         <div class="col-md-6">
                                                             <button type="submit" name="boton" value="reservar" class="btn btn-primary pull-right">Reservar <span class="glyphicon glyphicon-save"></span></button>
