--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -39,24 +39,24 @@
                 @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
                     @{
-    List<SelectListItem> listItems = new List<SelectListItem>();
-    listItems.Add(new SelectListItem
-    {
-        Text = "DNI",
-        Value = "1",
-    });
-    listItems.Add(new SelectListItem
-    {
-        Text = "Pasaporte",
-        Value = "2"
-    });
+                        List<SelectListItem> listItems = new List<SelectListItem>();
+                        listItems.Add(new SelectListItem
+                        {
+                            Text = "DNI",
+                            Value = "1",
+                        });
+                        listItems.Add(new SelectListItem
+                        {
+                            Text = "Pasaporte",
+                            Value = "2"
+                        });
                     }
                     @Html.DropDownListFor(model => model.tipoDoc, listItems, new { @class = "form-control" })
                 </div>
 
                 @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-1" })
                 <div class="col-md-3">
-                    @Html.TextBoxFor(model => model.codDoc, new { @class = "form-control"})
+                    @Html.TextBoxFor(model => model.codDoc, new { @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(model => model.codDoc)
                 </div>
             </div>
