--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -38,20 +38,17 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-3" })
                 <div class="col-md-3">
-                    @{
-                        List<SelectListItem> listItems = new List<SelectListItem>();
-                        listItems.Add(new SelectListItem
-                        {
-                            Text = "DNI",
-                            Value = "1",
-                        });
-                        listItems.Add(new SelectListItem
-                        {
-                            Text = "Pasaporte",
-                            Value = "2"
-                        });
+                    @if (Model.tipoDoc == 1)
+                    {
+                        <input type="text" class="form-control" value="DNI" disabled>
                     }
-                    @Html.DropDownListFor(model => model.tipoDoc, listItems, new { @class = "form-control" })
+                    @if (Model.tipoDoc == 2)
+                    {
+                        <input type="text" class="form-control" value="Pasaporte" disabled>
+                    }
+
+
+                    @Html.HiddenFor(model => model.tipoDoc, new { @class = "form-control", @readonly = "readonly" })
                 </div>
 
                 @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-1" })
