--- a/WebApplication4/WebApplication4/Views/Evento/PostergarEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/PostergarEvento.cshtml
@@ -30,39 +30,39 @@
             </div>
         </div>
 
-
-        <div class="row form-group">
-            <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha - hora:</label>
-            <div class="col-md-3 ">
-                <select id="fechaHora" class="form-control">
-                    <option id="0" value="0"> Seleccione </option>
-                    @foreach (var item in ViewBag.listaFunciones)
-                    {
-                        <option id="@item.codFuncion" value="@item.codFuncion">@item.fecha.ToString("dd/MM/yyyy") @item.horaIni.ToString("hh:mm tt")</option>
-                    }
-                </select>
+        @if (ViewBag.listaFunciones.Count > 0) { 
+            <div class="row form-group">
+                <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha - hora:</label>
+                <div class="col-md-3 ">
+                    <select id="fechaHora" class="form-control">
+                        <option id="0" value="0"> Seleccione </option>
+                        @foreach (var item in ViewBag.listaFunciones)
+                        {
+                            <option id="@item.codFuncion" value="@item.codFuncion">@item.fecha.ToString("dd/MM/yyyy") @item.horaIni.ToString("hh:mm tt")</option>
+                        }
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            <label for="fecha" class="control-label col-md-3 col-md-offset-3">Nueva fecha del evento:</label>
-            <div class="col-md-3">
-                <input id="fecha" type="date" class="form-control">
+            <div class="row form-group">
+                <label for="fecha" class="control-label col-md-3 col-md-offset-3">Nueva fecha del evento:</label>
+                <div class="col-md-3">
+                    <input id="fecha" type="date" class="form-control">
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            <label for="hora" class="control-label col-md-3 col-md-offset-3">Nueva hora del evento:</label>
-            <div class="col-md-3">
-                <input id="hora" type="time" class="form-control">
+            <div class="row form-group">
+                <label for="hora" class="control-label col-md-3 col-md-offset-3">Nueva hora del evento:</label>
+                <div class="col-md-3">
+                    <input id="hora" type="time" class="form-control">
+                </div>
             </div>
-        </div>
 
-        <div style="text-align: center">
-            <button type="button" class="btn btn-primary" onclick="postergar()"> Registrar Postergación  <span class="glyphicon glyphicon-ok-sign"></span></button>
-            <a href="@Url.Action("Index","Evento")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
-        </div>
-
+            <div style="text-align: center">
+                <button type="button" class="btn btn-primary" onclick="postergar()"> Registrar Postergación  <span class="glyphicon glyphicon-ok-sign"></span></button>
+                <a href="@Url.Action("Index","Evento")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+            </div>
+        }
         <script>
             function postergar() {
                 if ($("#fechaHora").val() == "0" || !$("#fecha").val() || !$("#hora").val()) {
@@ -80,8 +80,6 @@
                     alert("La fecha de postergacion debe ser posterior a la funcion");
                     return;
                 }
-
-
 
 
                 //ya se eligieron todos los campos
@@ -109,12 +107,9 @@
                         alert("¡Se postergó la función con éxito!");
                     },
                     error: function (xhr, textStatus, error) {
-                        alert("Ooops... Ocurrió algo inesperado");
+                        alert( xhr.statusText);
                     },
                 });
-
-
-
 
 
             }
