--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -43,6 +43,7 @@
                     <ul id="pref" >
                         <li><a href="@Url.Action("ModificarDatos","CuentaUsuario")">Actualizar mis datos</a></li>
                         <li><a href="@Url.Action("ChangePassword","Manage")">Cambiar mi contraseña</a></li>
+                        <li><a href="@Url.Action("MisPreferencias", "CuentaUsuario")">Ver mis preferencias</a></li>
                         <li><a href="@Url.Action("MisReservas", "CuentaUsuario")">Ver mis reservas</a></li>
                         <li><a href="@Url.Action("MisCompras", "CuentaUsuario")">Ver mis Compras</a></li>
                         <li><a href="@Url.Action("MiCarrito","CuentaUsuario")">Ver carrito</a></li>
