--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisPreferencias.cshtml
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-    @using (Html.BeginForm("ModificarDatos", "CuentaUsuario", FormMethod.Post))
+    @using (Html.BeginForm("MisPreferencias", "CuentaUsuario", FormMethod.Post))
     {
         <div class="container">
             <div class="col-md-8">
