--- a/WebApplication4/WebApplication4/Content/estilos-index1.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index1.css
@@ -1,10 +1,43 @@
 *{margin: 0;padding: 0}
-#busqAvanzada{text-align: center; margin-top: 10px;}
-header{margin-bottom: 10px}
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  img.bg {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+  }
+}
+
+#busqAvanzada{text-align: center; margin-top: 10px;margin-bottom: 10px;}
+body{background:url(fondo1.jpg) fixed top center !important;background-repeat:space}
 #barra{background-color: #337ab7; color: white }
 #seccionPrincipal{}
 #carousel-1{margin-bottom: 10px}
-#footer{background: #101010;height: 100px;color: white;text-align: center}
+#footer{padding:20px;
+        background: #101010;
+       height: 150px;
+       color: white; 
+       text-align: center; 
+       font-family:'Comic Sans MS'
+}
+
+
+
+
+
 .event{cursor: pointer}
 #logeado{display: none}
 .headDestacados {
