--- a/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/PuntoVentas.cshtml
@@ -19,58 +19,70 @@
 }
 
 
-<h2>Puntos de Venta</h2>
 
-<html>
-<body>
-
-    <div class="col-md-2">
-        <form action="" class="" role="search">
-            <select class="form-control" name="" id="comboBusq" onchange="busca2()">
-                <option>Departamento</option>
-                <option value="0">Todos</option>
-                @foreach (var item in listaSearch)
-                {
-                    <option value="@item.idRegion">
-                        @item.nombre
-                    </option>
-                }
-            </select>
-        </form>
+<div class="container-fluid">
+    <div class="col-md-3">
+        <ol class="breadcrumb">
+            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
+            <li class="active">Puntos de venta</li>
+        </ol>
+    </div>
 </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="container">
+<div class="container">
+    <!--PARTE IMPORTANTE-->
+    <div class="col-md-8">
+        <div class="form-group row">
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <h4 class="pull-right">Mostrar solo:</h4>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6">
+                <form action="" class="" role="search">
+                    <select class="form-control" name="" id="comboBusq" onchange="busca2()">
+                        <option>Departamento</option>
+                        <option value="0">Todos</option>
+                        @foreach (var item in listaSearch)
+                        {
+                            <option value="@item.idRegion">
+                                @item.nombre
+                            </option>
+                        }
+                    </select>
+                </form>
+            </div>
+        </div>
         <div class="row">
-            <table id="mytable" class="table table-bordered table-hover">
-                <thead>
-                    <tr class="thead">
-                        <th>Nombre</th>
-                        <th>Ubicacion</th>
-                        <th>Provincia</th>
-                        <th>Departamento</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody">
-                    @*se muestra la lista de puntos de venta*@
-                    @foreach (var row in listaPunto)
-                    {
-                        <tr id=@row.codPuntoVenta onclick="myFunction(this)">
-                            <td>@row.nombre</td>
-                            <td>@row.ubicacion</td>
-                            <td>@db.Region.Find(row.idProvincia).nombre</td>
-                            <td>@db.Region.Find(row.idRegion).nombre</td>
+            <div class="table-responsive">
+                <table id="mytable" class="table table-bordered table-hover">
+                    <thead>
+                        <tr class="thead">
+                            <th class="col-md-3">Nombre</th>
+                            <th class="col-md-5">Dirección</th>
+                            <th class="col-md-2">Provincia</th>
+                            <th class="col-md-2">Departamento</th>
                         </tr>
-                    }
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody id="tbody" style="cursor:default">
+                        @*se muestra la lista de puntos de venta*@
+                        @foreach (var row in listaPunto)
+                        {
+                            <tr id=@row.codPuntoVenta onclick="myFunction(this)">
+                                <td>@row.nombre</td>
+                                <td>@row.ubicacion</td>
+                                <td>@db.Region.Find(row.idProvincia).nombre</td>
+                                <td>@db.Region.Find(row.idRegion).nombre</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+            
         </div>
     </div>
-</body>
-</html>
+    <!--CARRUSEL-->
+    <div class="col-md-4">
 
+    </div>
+</div>
 <script>
     function busca2() {
         var region = $('#comboBusq option:selected').val();
