--- a/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
@@ -115,8 +115,8 @@
         var elem = document.getElementById("codVenT");
         elem.value = x.cells[0].innerHTML;
         x.className = "trselected";
-
     }
+
     function busca() {
         var usuario = $('#idBusq').val();
         var tipo = $('#comboBusq option:selected').val();
@@ -125,19 +125,18 @@
             url: "@Url.Action("SearchReserva", "CuentaUsuario")",
             data: { usuario: usuario, tipo: tipo },
             success: function (data) {
-                window.location.href = '/CuentaUsuario/BuscaReserva';
+                window.location.href = '/Ventas/BuscaReserva';
             },
             error: function () {
                 alert("Error :(");
             }
         });
-
     }
 
     function redirigeReserva() {
         var reserva = $('#codVenT').val();
         if (reserva != "") {
-            window.location.href = '/CuentaUsuario/ComprarEntradaReservadaA?reserva=' + reserva;
+            window.location.href = '/Ventas/PagarReserva?reserva=' + reserva;
         } else {
             alert("Seleccione una Reserva");
             evento = "";
